--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,11 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Register Here</title>
-<link rel="icon" type="image/x-icon" href="../resource/images/favicon.png" />
-<link rel="stylesheet" href="../resource/bootstrap/css/bootstrap.min.css">
-<script src="../resource/js/jquery.js"></script>
-<script src="../resource/bootstrap/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../resource/css/register.css">
+<link rel="icon" type="image/x-icon" href="../static/resource/images/favicon.png" />
+<link rel="stylesheet" href="../static/resource/bootstrap/css/bootstrap.min.css">
+<script src="../static/resource/js/jquery.js"></script>
+<script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../static/resource/css/register.css">
 
 
 	<!-- Validating Password -->
