--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,17 +4,17 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet"
-          href="../resource/bootstrap/css/bootstrap.min.css">
-    <script src="../resource/js/jquery.js"></script>
-    <script src="../resource/bootstrap/js/bootstrap.min.js"></script>
+          href="../static/resource/bootstrap/css/bootstrap.min.css">
+    <script src="../static/resource/js/jquery.js"></script>
+    <script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css"
-          href="../resource/css/overall.css"/>
+          href="../static/resource/css/overall.css"/>
 </head>
 <body>
 <footer class="footer-distributed">
     <div class="footer-left">
         <p class="footer-links">
-            <a href="../../index.html">Home</a> 
+            <a href="../index.html">Home</a>
             <a href="aboutUs.html">About Us</a> 
             <a href="getAllProducts.html">Products</a>
         </p>
