--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Login</title>
-    <link rel="icon" type="image/x-icon" href="../resource/images/favicon.png"/>
-    <link rel="stylesheet" href="../resource/bootstrap/css/bootstrap.min.css">
-    <script src="../resource/js/jquery.js"></script>
-    <script src="../resource/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="../static/resource/images/favicon.png"/>
+    <link rel="stylesheet" href="../static/resource/bootstrap/css/bootstrap.min.css">
+    <script src="../static/resource/js/jquery.js"></script>
+    <script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
     <script>
         $(function(){
             $("#navbar").load("navbar.html")
